--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/isa16/VirtualBorn#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "json-stringify-safe": "^5.0.1",
     "mongoose": "^5.5.4",
     "mongoose-paginate": "^5.0.3",
     "mongose": "0.0.2-security",
